about section done

--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
 </nav>
 
 <!-- Hero Section -->
-<header class="hero-section">
+<header class="hero-section" id="home">
     <div class="container row">
-        <div class="image-section">
+        <div>
             <img src="images/my-photo.png" alt="My Photo">
         </div>
-        <div class="text-section">
+        <div>
             <h1>I'm Ashik-<span class="text-primary">Himel</span><br><span class="text-primary">Front-End</span> Developer</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, reiciendis! Voluptate consequuntur voluptates veritatis dolores.</p>
             <a href="#" class="btn">Hire Me <i class="fa fa-arrow-right"></i></a>
@@ -55,8 +55,41 @@
 <section class="about-section" id="about">
     <div class="container">
         <div class="title-area">
-            <h2 class="section-title"><span class="text-primary">About</span> Me</h2>
+            <h2><span class="text-primary">About</span> Me</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat odit iusto labore?</p>
+        </div>
+        <div class="row">
+            <div>
+                <img src="images/about-me.png" alt="About Me">
+            </div>
+            <div>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate repellat assumenda, atque tenetur aliquid officia corporis quaerat modi minus sunt.</p>
+                <div class="icon-boxes">
+                   <div>
+                       <h1>02+</h1>
+                       <p>Years<br>experience</p>
+                   </div> 
+                   <div>
+                       <h1>50+</h1>
+                       <p>Project<br>completed</p>
+                   </div>
+                   <div>
+                       <h1>15+</h1>
+                       <p>Happy<br>clients</p>
+                   </div>
+                </div>
+                <a href="#" class="btn">Download CV <i class="fa fa-download"></i></a>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Skills Section -->
+<section class="skills-section" id="skills">
+    <div class="container">
+        <div class="title-area">
+            <h2>My <span class="text-primary">Skills</span></h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima fuga optio ducimus.</p>
         </div>
         <div class="row">
             
