skills section done

--- a/index.html
+++ b/index.html
@@ -92,7 +92,100 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima fuga optio ducimus.</p>
         </div>
         <div class="row">
-            
+            <div>
+                <div>
+                    <div class="progress-title">
+                        <span>HTML</span>
+                        <span>90%</span>
+                    </div>
+                    <div class="progress-bar">
+                        <div class="progress" style="width: 90%;"></div>
+                    </div>
+                </div>
+                <div>
+                    <div class="progress-title">
+                        <span>CSS</span>
+                        <span>90%</span>
+                    </div>
+                    <div class="progress-bar">
+                        <div class="progress" style="width: 90%;"></div>
+                    </div>
+                </div>
+                <div>
+                    <div class="progress-title">
+                        <span>Bootstrap</span>
+                        <span>85%</span>
+                    </div>
+                    <div class="progress-bar">
+                        <div class="progress" style="width: 85%;"></div>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <div class="progress-title">
+                        <span>JavaScript</span>
+                        <span>75%</span>
+                    </div>
+                    <div class="progress-bar">
+                        <div class="progress" style="width: 75%;"></div>
+                    </div>
+                </div>
+                <div>
+                    <div class="progress-title">
+                        <span>jQuery</span>
+                        <span>70%</span>
+                    </div>
+                    <div class="progress-bar">
+                        <div class="progress" style="width: 70%;"></div>
+                    </div>
+                </div>
+                <div>
+                    <div class="progress-title">
+                        <span>React JS</span>
+                        <span>85%</span>
+                    </div>
+                    <div class="progress-bar">
+                        <div class="progress" style="width: 85%;"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Services Section -->
+<section class="services-section">
+    <div class="container">
+        <div class="title-area">
+            <h2>My <span class="text-primary">Services</span></h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate sit accusamus amet!</p>
+        </div>
+        <div class="row">
+            <div>
+                <div class="card">
+                    <i class="fas fa-code"></i>
+                    <h2>Website Design</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quae adipisci dolorum!</p>
+                    <a href="#" class="btn">See More <i class="fa fa-arrow-right"></i></a>
+                </div>
+            </div>
+            <div>
+                <div class="card">
+                    <i class="fas fa-code"></i>
+                    <h2>Website Design</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quae adipisci dolorum!</p>
+                    <a href="#" class="btn">See More <i class="fa fa-arrow-right"></i></a>
+                </div>
+            </div>
+            <div>
+                <div class="card">
+                    <i class="fas fa-code"></i>
+                    <h2>Website Design</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quae adipisci dolorum!</p>
+                    <a href="#" class="btn">See More <i class="fa fa-arrow-right"></i></a>
+                </div>
+            </div>
         </div>
     </div>
 </section>
