--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/utilities.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body id="home">
 
 <!-- Navigation Section -->
 <nav class="nav-section">
@@ -37,7 +37,7 @@
 </nav>
 
 <!-- Hero Section -->
-<header class="hero-section" id="home">
+<header class="hero-section">
     <div class="container row">
         <div>
             <img src="images/my-photo.png" alt="My Photo">
@@ -155,7 +155,7 @@
 </section>
 
 <!-- Services Section -->
-<section class="services-section">
+<section class="services-section" id="services">
     <div class="container">
         <div class="title-area">
             <h2>My <span class="text-primary">Services</span></h2>
@@ -186,6 +186,19 @@
                     <a href="#" class="btn">See More <i class="fa fa-arrow-right"></i></a>
                 </div>
             </div>
+        </div>
+    </div>
+</section>
+
+<!-- Portfolio Section -->
+<section class="portfolio-section" id="portfolio">
+    <div class="container">
+        <div class="title-area">
+            <h2>My <span class="text-primary">Portfolio</span></h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste expedita perspiciatis incidunt!</p>
+        </div>
+        <div class="row">
+            
         </div>
     </div>
 </section>
