scroll down added on mobile

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="shortcut icon" href="images/site-icon.png" type="image/x-icon">
     <!-- FontAwesome CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <!-- Swiper JS Slider -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/7.2.0/swiper-bundle.min.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/preset.css">
     <link rel="stylesheet" href="css/utilities.css">
@@ -191,18 +193,35 @@
 </section>
 
 <!-- Portfolio Section -->
-<section class="portfolio-section" id="portfolio">
+<!-- <section class="portfolio-section" id="portfolio">
     <div class="container">
         <div class="title-area">
             <h2>My <span class="text-primary">Portfolio</span></h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste expedita perspiciatis incidunt!</p>
         </div>
         <div class="row">
-
+            <div class="swiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <img src="images/portfolio.jpg" alt="Portfolio Item">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="images/portfolio.jpg" alt="Portfolio Item">
+                    </div>
+                </div>
+                <div class="swiper-pagination"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-scrollbar"></div>
+            </div>
         </div>
     </div>
-</section>
+</section> -->
     
+
+    <!-- Swiper JS Slider -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/7.2.0/swiper-bundle.min.js"></script>
+    <!-- Custom JS -->
     <script src="js/script.js"></script>
 </body>
 </html>
