--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
 </head>
 <body id="home">
 
+<!-- Hire Me PopUp -->
+<main class="popup">
+    <div class="popup-box">
+        <i class="far fa-times-circle"></i>
+    </div>
+</main>
+
 <!-- Navigation Section -->
 <nav class="nav-section">
     <div class="container">
@@ -28,7 +35,7 @@
             <li><a href="#services" class="nav-link">Services</a></li>
             <li><a href="#portfolio" class="nav-link">Portfolio</a></li>
             <li><a href="#contact" class="nav-link">Contact Me</a></li>
-            <li><a href="#hire" class="nav-link btn">Hire Me</a></li>
+            <li><a href="#hire" class="nav-link btn popup-btn">Hire Me</a></li>
         </ul>
         <div class="hamburger">
             <span></span>
@@ -47,7 +54,7 @@
         <div>
             <h1>I'm Ashik-<span class="text-primary">Himel</span><br><span class="text-primary">Front-End</span> Developer</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, reiciendis! Voluptate consequuntur voluptates veritatis dolores.</p>
-            <a href="#" class="btn">Hire Me <i class="fa fa-arrow-right"></i></a>
+            <a href="#hire" class="btn hero-popup-btn">Hire Me <i class="fa fa-arrow-right"></i></a>
             <a href="#about" class="btn-alt"><i class="fas fa-mouse"></i> Scroll Down <i class="fa fa-arrow-down"></i></a>
         </div>
     </div>
@@ -193,7 +200,7 @@
 </section>
 
 <!-- Portfolio Section -->
-<!-- <section class="portfolio-section" id="portfolio">
+<section class="portfolio-section" id="portfolio">
     <div class="container">
         <div class="title-area">
             <h2>My <span class="text-primary">Portfolio</span></h2>
@@ -203,20 +210,16 @@
             <div class="swiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="images/portfolio.jpg" alt="Portfolio Item">
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="images/portfolio.jpg" alt="Portfolio Item">
+                        
                     </div>
                 </div>
                 <div class="swiper-pagination"></div>
                 <div class="swiper-button-prev"></div>
                 <div class="swiper-button-next"></div>
-                <div class="swiper-scrollbar"></div>
             </div>
         </div>
     </div>
-</section> -->
+</section>
     
 
     <!-- Swiper JS Slider -->
