--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 </head>
 <body id="home">
 
+<!-- Preloader -->
+<div class="loading"></div>
+
 <!-- Hire Me PopUp -->
 <main class="popup">
     <div class="popup-box">
