html css minified

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,21 +16,18 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body id="home">
-
 <!-- Preloader -->
 <div class="loading"></div>
-
 <!-- Hire Me PopUp -->
 <main class="popup">
     <div class="popup-box">
         <i class="far fa-times-circle"></i>
     </div>
 </main>
-
 <!-- Navigation Section -->
 <nav class="nav-section">
     <div class="container">
-        <a href="#" class="nav-brand">Ashik-<span class="text-primary">Himel</span></a>
+        <a href="#brand" class="nav-brand">Ashik-<span class="text-primary">Himel</span></a>
         <ul class="navigation">
             <li><a href="#home" class="nav-link nav-active">Home</a></li>
             <li><a href="#about" class="nav-link">About Me</a></li>
@@ -47,7 +44,6 @@
         </div>
     </div>
 </nav>
-
 <!-- Hero Section -->
 <header class="hero-section">
     <div class="container row">
@@ -62,7 +58,6 @@
         </div>
     </div>
 </header>
-
 <!-- About Section -->
 <section class="about-section" id="about">
     <div class="container">
@@ -95,7 +90,6 @@
         </div>
     </div>
 </section>
-
 <!-- Skills Section -->
 <section class="skills-section" id="skills">
     <div class="container">
@@ -165,7 +159,6 @@
         </div>
     </div>
 </section>
-
 <!-- Services Section -->
 <section class="services-section" id="services">
     <div class="container">
@@ -201,7 +194,6 @@
         </div>
     </div>
 </section>
-
 <!-- Portfolio Section -->
 <section class="portfolio-section" id="portfolio">
     <div class="container">
@@ -222,12 +214,11 @@
             </div>
         </div>
     </div>
-</section>
-    
+</section> 
 
-    <!-- Swiper JS Slider -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/7.2.0/swiper-bundle.min.js"></script>
-    <!-- Custom JS -->
-    <script src="js/script.js"></script>
+<!-- Swiper JS Slider -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/7.2.0/swiper-bundle.min.js"></script>
+<!-- Custom JS -->
+<script src="js/script.js"></script>
 </body>
 </html>
