--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     <!-- Swiper JS Slider -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/7.2.0/swiper-bundle.min.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/preset.css">
-    <link rel="stylesheet" href="css/utilities.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body id="home">
 <!-- Preloader -->
@@ -219,6 +217,6 @@
 <!-- Swiper JS Slider -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/7.2.0/swiper-bundle.min.js"></script>
 <!-- Custom JS -->
-<script src="js/script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
