--- a/index.html
+++ b/index.html
@@ -203,7 +203,40 @@
             <div class="swiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        
+                        <div class="row">
+                            <div>
+                                <img src="images/portfolio.jpg" alt="Portfolio Item">
+                            </div>
+                            <div>
+                                <h2>Portfolio Landing Page</h2>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, aliquid.</p>
+                                <a href="#portfolio" class="btn">View Demo</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="row">
+                            <div>
+                                <img src="images/portfolio.jpg" alt="Portfolio Item">
+                            </div>
+                            <div>
+                                <h2>Portfolio Landing Page</h2>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, aliquid.</p>
+                                <a href="#portfolio" class="btn">View Demo</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="row">
+                            <div>
+                                <img src="images/portfolio.jpg" alt="Portfolio Item">
+                            </div>
+                            <div>
+                                <h2>Portfolio Landing Page</h2>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, aliquid.</p>
+                                <a href="#portfolio" class="btn">View Demo</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="swiper-pagination"></div>
