--- a/index.html
+++ b/index.html
@@ -202,46 +202,47 @@
         <div class="row">
             <div class="swiper">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                        <div class="row">
-                            <div>
-                                <img src="images/portfolio.jpg" alt="Portfolio Item">
-                            </div>
-                            <div>
-                                <h2>Portfolio Landing Page</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, aliquid.</p>
-                                <a href="#portfolio" class="btn">View Demo</a>
-                            </div>
+                  <div class="swiper-slide">
+                    <div class="row">
+                        <div>
+                            <img src="images/portfolio.jpg" alt="Portfolio Item">
+                        </div>
+                        <div>
+                            <h2>Portfolio Landing Page</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, aliquid.</p>
+                            <a href="#portfolio" class="btn">View Demo</a>
                         </div>
                     </div>
-                    <div class="swiper-slide">
-                        <div class="row">
-                            <div>
-                                <img src="images/portfolio.jpg" alt="Portfolio Item">
-                            </div>
-                            <div>
-                                <h2>Portfolio Landing Page</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, aliquid.</p>
-                                <a href="#portfolio" class="btn">View Demo</a>
-                            </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="row">
+                        <div>
+                            <img src="images/portfolio.jpg" alt="Portfolio Item">
+                        </div>
+                        <div>
+                            <h2>Portfolio Landing Page</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, aliquid.</p>
+                            <a href="#portfolio" class="btn">View Demo</a>
                         </div>
                     </div>
-                    <div class="swiper-slide">
-                        <div class="row">
-                            <div>
-                                <img src="images/portfolio.jpg" alt="Portfolio Item">
-                            </div>
-                            <div>
-                                <h2>Portfolio Landing Page</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, aliquid.</p>
-                                <a href="#portfolio" class="btn">View Demo</a>
-                            </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="row">
+                        <div>
+                            <img src="images/portfolio.jpg" alt="Portfolio Item">
+                        </div>
+                        <div>
+                            <h2>Portfolio Landing Page</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, aliquid.</p>
+                            <a href="#portfolio" class="btn">View Demo</a>
                         </div>
                     </div>
+                  </div>
                 </div>
                 <div class="swiper-pagination"></div>
                 <div class="swiper-button-prev"></div>
                 <div class="swiper-button-next"></div>
+                <div class="swiper-scrollbar"></div>
             </div>
         </div>
     </div>
