--- a/index.html
+++ b/index.html
@@ -242,11 +242,19 @@
                 <div class="swiper-pagination"></div>
                 <div class="swiper-button-prev"></div>
                 <div class="swiper-button-next"></div>
-                <div class="swiper-scrollbar"></div>
             </div>
         </div>
     </div>
-</section> 
+</section>
+
+<section class="contact-section" id="contact">
+    <div class="container">
+        <div class="title-area">
+            <h2><span class="text-primary">Contact</span> Me</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore neque laudantium perspiciatis.</p>
+        </div>
+    </div>
+</section>
 
 <!-- Swiper JS Slider -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/7.2.0/swiper-bundle.min.js"></script>
