--- a/index.html
+++ b/index.html
@@ -246,7 +246,22 @@
         </div>
     </div>
 </section>
-
+<!-- Banner Section -->
+<section class="banner-section">
+    <div class="container">
+        <div class="row">
+            <div>
+                <h2>Have a Project? Contact Me.</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque corrupti assumenda ipsum culpa. Sint, dicta? Id facere laboriosam ipsum quae.</p>
+                <a href="#" class="btn">Send Email <i class="fas fa-paper-plane"></i></a>
+            </div>
+            <div>
+                <img src="images/mobile.png" alt="Mobile Image">
+            </div>
+        </div>
+    </div>
+</section>
+<!-- Contact Section -->
 <section class="contact-section" id="contact">
     <div class="container">
         <div class="title-area">
