--- a/index.html
+++ b/index.html
@@ -268,8 +268,52 @@
             <h2><span class="text-primary">Contact</span> Me</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore neque laudantium perspiciatis.</p>
         </div>
+        <div class="row">
+            <div>
+                <div class="row">
+                    <div>
+                        <label for="name">Your Name</label>
+                        <input type="text" name="name" id="name" placeholder="Enter Your Name">
+                    </div>
+                    <div>
+                        <label for="email">Your Email</label>
+                        <input type="email" name="email" id="email" placeholder="Enter Your Email">
+                    </div>
+                </div>
+                <label for="subject">Subject</label>
+                <input type="text" name="subject" id="subject" placeholder="Enter Subject">
+                <label for="body">Your Massage</label>
+                <textarea name="body" id="body" rows="8" placeholder="Enter Your Massage"></textarea>
+                <a href="#" class="btn">Send Massage <i class="fas fa-paper-plane"></i></a>
+            </div>
+            <div>
+                <div class="card">
+                    <i class="fas fa-id-card"></i>
+                    <p><span>Facebook:</span> <a href="https://www.facebook.com/ashikujjaman.himel" target="_blank">Ashikujjaman Himel</a></p>
+                    <p><span>Email:</span> <a href="mailto:ashikujjamanhimel@gmail.com" target="_blank">ashikujjamanhimel@gmail.com</a></p>
+                    <p><span>WhatsApp:</span> <a href="https://wa.me/+8801770473899" target="_blank">+880 1770 473899</a></p>
+                    <p><span>Mobile:</span> <a href="tel:+8801770473899" target="_blank">+880 1770 473899</a></p>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
+<!-- Footer Section -->
+<footer class="footer-section">
+    <div class="container row">
+            <div>
+                <p>&copy;Copyright 2021, All Right Reserved. Ashik-Himel</p>
+            </div>
+            <div>
+                <div class="social-icons">
+                    <a href="https://www.facebook.com/ashikujjaman.himel" target="_blank"><i class="fab fa-facebook"></i></a>
+                    <a href="https://wa.me/+8801770473899" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                    <a href="mailto:ashikujjamanhimel@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
+                    <a href="tel:+8801770473899" target="_blank"><i class="fas fa-phone-alt"></i></a>
+                </div>
+            </div>
+    </div>
+</footer>
 
 <!-- Swiper JS Slider -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/7.2.0/swiper-bundle.min.js"></script>
