popup design done

--- a/index.html
+++ b/index.html
@@ -20,6 +20,23 @@
 <main class="popup">
     <div class="popup-box">
         <i class="far fa-times-circle"></i>
+        <div class="row">
+            <div>
+                <label for="name">Your Name</label>
+                <input type="text" name="name" id="name" placeholder="Enter Your Name">
+            </div>
+            <div>
+                <label for="email">Your Email</label>
+                <input type="email" name="email" id="email" placeholder="Enter Your Email">
+            </div>
+        </div>
+        <label for="project">Project Title</label>
+        <input type="text" name="project" id="project" placeholder="Enter Project Title">
+        <label for="description">Project Description</label>
+        <textarea name="description" id="description" placeholder="Describe Your Project" rows="6"></textarea>
+        <label for="attachment"></label>
+        <input type="file" name="attachment" id="attachment" multiple>
+        <a href="#send" class="btn">Send <i class="fas fa-paper-plane"></i></a>
     </div>
 </main>
 <!-- Navigation Section -->
@@ -83,7 +100,7 @@
                        <p>Happy<br>clients</p>
                    </div>
                 </div>
-                <a href="#" class="btn">Download CV <i class="fa fa-download"></i></a>
+                <a href="files/Ashik_Himel.pdf" class="btn" download="">Download CV <i class="fa fa-download"></i></a>
             </div>
         </div>
     </div>
@@ -253,7 +270,7 @@
             <div>
                 <h2>Have a Project? Contact Me.</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque corrupti assumenda ipsum culpa. Sint, dicta? Id facere laboriosam ipsum quae.</p>
-                <a href="#" class="btn">Send Email <i class="fas fa-paper-plane"></i></a>
+                <a href="mailto:ashikujjamanhimel@gmail.com" class="btn">Send Email <i class="fas fa-paper-plane"></i></a>
             </div>
             <div>
                 <img src="images/mobile.png" alt="Mobile Image">
