--- a/index.html
+++ b/index.html
@@ -192,16 +192,16 @@
             </div>
             <div>
                 <div class="card">
-                    <i class="fas fa-code"></i>
-                    <h2>Website Design</h2>
+                    <i class="fas fa-image"></i>
+                    <h2>UI/UX Design</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quae adipisci dolorum!</p>
                     <a href="#" class="btn">See More <i class="fa fa-arrow-right"></i></a>
                 </div>
             </div>
             <div>
                 <div class="card">
-                    <i class="fas fa-code"></i>
-                    <h2>Website Design</h2>
+                    <i class="fab fa-wordpress"></i>
+                    <h2>WordPress</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quae adipisci dolorum!</p>
                     <a href="#" class="btn">See More <i class="fa fa-arrow-right"></i></a>
                 </div>
