--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <!-- Preloader -->
 <div class="loading"></div>
 <!-- Hire Me PopUp -->
-<main class="popup">
+<!-- <main class="popup">
     <div class="popup-box">
         <i class="far fa-times-circle"></i>
         <div class="row">
@@ -38,7 +38,7 @@
         <input type="file" name="attachment" id="attachment" multiple>
         <a href="#send" class="btn">Send <i class="fas fa-paper-plane"></i></a>
     </div>
-</main>
+</main> -->
 <!-- Navigation Section -->
 <nav class="nav-section">
     <div class="container">
@@ -50,7 +50,7 @@
             <li><a href="#services" class="nav-link">Services</a></li>
             <li><a href="#portfolio" class="nav-link">Portfolio</a></li>
             <li><a href="#contact" class="nav-link">Contact Me</a></li>
-            <li><a href="#hire" class="nav-link btn popup-btn">Hire Me</a></li>
+            <li><a href="pages/hire.html" class="nav-link btn popup-btn">Hire Me</a></li>
         </ul>
         <div class="hamburger">
             <span></span>
@@ -68,7 +68,7 @@
         <div>
             <h1>I'm Ashik-<span class="text-primary">Himel</span><br><span class="text-primary">Front-End</span> Developer</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, reiciendis! Voluptate consequuntur voluptates veritatis dolores.</p>
-            <a href="#hire" class="btn hero-popup-btn">Hire Me <i class="fa fa-arrow-right"></i></a>
+            <a href="pages/hire.html" class="btn hero-popup-btn">Hire Me <i class="fa fa-arrow-right"></i></a>
             <a href="#about" class="btn-alt"><i class="fas fa-mouse"></i> Scroll Down <i class="fa fa-arrow-down"></i></a>
         </div>
     </div>
