--- a/pages/hire.html
+++ b/pages/hire.html
@@ -38,7 +38,7 @@
 
                     <input type="hidden" name="_subject" value="Hire Offer from Website!">
                     <input type="hidden" name="_captcha" value="false">
-                    <input type="hidden" name="_next" value="http://127.0.0.1:5500/pages/thank-you.html">
+                    <input type="hidden" name="_next" value="https://portfolio-ashik-himel.netlify.app/pages/thank-you.html">
 
                     <button type="submit" class="btn">Send Offer <i class="fas fa-paper-plane"></i></button>
                 </form>
