--- a/pages/thank-you.html
+++ b/pages/thank-you.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thank You :: Ashik-Himel</title>
     <link rel="shortcut icon" href="/images/site-icon.png" type="image/x-icon">
+    <!-- FontAwesome CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/style.css">
 </head>
@@ -17,7 +19,7 @@
                 <p>Thank you for submiting this form. We'll contact with you as soon as possible.</p>
             </div>
             <div>
-                <a href="/index.html" class="btn">Return Home</a>
+                <a href="/index.html" class="btn">Return Home <i class="fas fa-share-square"></i></a>
             </div>
         </div>
     </main>
