--- a/pages/hire.html
+++ b/pages/hire.html
@@ -35,13 +35,12 @@
                     <label for="description">Project Description</label>
                     <textarea name="description" id="description" rows="6" placeholder="Describe Your Project" required></textarea>
                     <input type="file" name="attachment" id="attachment" accept="image/png, image/jpeg" multiple>
+                    <button type="submit" class="btn">Send Offer <i class="fas fa-paper-plane"></i></button>
 
                     <input type="hidden" name="_subject" value="Hire Offer from Website!">
                     <input type="hidden" name="_captcha" value="false">
                     <input type="hidden" name="_template" value="table">
-                    <input type="hidden" name="_next" value="portfolio-ashik-himel.netlify.app/pages/thank-you.html">
-
-                    <button type="submit" class="btn">Send Offer <i class="fas fa-paper-plane"></i></button>
+                    <input type="hidden" name="_next" value="https://portfolio-ashik-himel.netlify.app/pages/thank-you.html">
                 </form>
             </div>
         </div>
