--- a/pages/thank-you.html
+++ b/pages/thank-you.html
@@ -19,7 +19,7 @@
                 <p>Thank you for submiting this form. We'll contact with you as soon as possible.</p>
             </div>
             <div>
-                <a href="/index.html" class="btn">Return Home <i class="fas fa-share-square"></i></a>
+                <a href="/" class="btn">Return Home <i class="fas fa-share-square"></i></a>
             </div>
         </div>
     </main>
