--- a/index.html
+++ b/index.html
@@ -16,29 +16,6 @@
 <body id="home">
 <!-- Preloader -->
 <div class="loading"></div>
-<!-- Hire Me PopUp -->
-<!-- <main class="popup">
-    <div class="popup-box">
-        <i class="far fa-times-circle"></i>
-        <div class="row">
-            <div>
-                <label for="name">Your Name</label>
-                <input type="text" name="name" id="name" placeholder="Enter Your Name">
-            </div>
-            <div>
-                <label for="email">Your Email</label>
-                <input type="email" name="email" id="email" placeholder="Enter Your Email">
-            </div>
-        </div>
-        <label for="project">Project Title</label>
-        <input type="text" name="project" id="project" placeholder="Enter Project Title">
-        <label for="description">Project Description</label>
-        <textarea name="description" id="description" placeholder="Describe Your Project" rows="6"></textarea>
-        <label for="attachment"></label>
-        <input type="file" name="attachment" id="attachment" multiple>
-        <a href="#send" class="btn">Send <i class="fas fa-paper-plane"></i></a>
-    </div>
-</main> -->
 <!-- Navigation Section -->
 <nav class="nav-section">
     <div class="container">
@@ -316,7 +293,7 @@
                     <input type="hidden" name="_subject" value="Contact from Website!">
                     <input type="hidden" name="_captcha" value="false">
                     <input type="hidden" name="_template" value="table">
-                    <input type="hidden" name="_next" value="https://portfolio-ashik-himel.netlify.app/pages/thank-you.html">
+                    <input type="hidden" name="_next" value="https://dev.zihadshoe.com/pages/thank-you.html">
                 </form>
             </div>
         </div>
@@ -339,32 +316,8 @@
     </div>
 </footer>
 <!-- Messenger Chat Plugin -->
-<!-- Messenger Chat Plugin Code -->
 <div id="fb-root"></div>
-
-<!-- Your Chat Plugin code -->
-<div id="fb-customer-chat" class="fb-customerchat">
-</div>
-<script>
-    var chatbox = document.getElementById('fb-customer-chat');
-    chatbox.setAttribute("page_id", "105351811966153");
-    chatbox.setAttribute("attribution", "biz_inbox");
-
-    window.fbAsyncInit = function() {
-    FB.init({
-        xfbml            : true,
-        version          : 'v12.0'
-    });
-    };
-
-    (function(d, s, id) {
-    var js, fjs = d.getElementsByTagName(s)[0];
-    if (d.getElementById(id)) return;
-    js = d.createElement(s); js.id = id;
-    js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
-    fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));
-</script>
+<div id="fb-customer-chat" class="fb-customerchat"></div>
 
 <!-- Swiper JS Slider -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/7.2.0/swiper-bundle.min.js"></script>
