--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="container">
         <a href="#brand" class="nav-brand">Ashik-<span class="text-primary">Himel</span></a>
         <ul class="navigation">
-            <li><a href="#home" class="nav-link nav-active">Home</a></li>
+            <li><a href="#home" class="nav-link">Home</a></li>
             <li><a href="#about" class="nav-link">About Me</a></li>
             <li><a href="#skills" class="nav-link">My Skills</a></li>
             <li><a href="#services" class="nav-link">Services</a></li>
@@ -303,7 +303,7 @@
 <footer class="footer-section">
     <div class="container row">
             <div>
-                <p>&copy;Copyright 2021, All Right Reserved. Ashik-Himel</p>
+                <p>Copyright &copy; 2021, Ashik-Himel. All Right Reserved. </p>
             </div>
             <div>
                 <div class="social-icons">
