--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="root">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -28,11 +28,15 @@
             <li><a href="#portfolio" class="nav-link">Portfolio</a></li>
             <li><a href="#contact" class="nav-link">Contact Me</a></li>
             <li><a href="pages/hire.html" class="nav-link btn popup-btn">Hire Me</a></li>
+            <li><i class="theme-toggler fas fa-moon"></i></li>
         </ul>
-        <div class="hamburger">
-            <span></span>
-            <span></span>
-            <span></span>
+        <div class="hamburger-section">
+            <i class="theme-toggler fas fa-moon"></i>
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </div>
     </div>
 </nav>
@@ -77,7 +81,7 @@
                        <p>Happy<br>clients</p>
                    </div>
                 </div>
-                <a href="files/Ashik_Himel.pdf" class="btn" download="">Download CV <i class="fa fa-download"></i></a>
+                <a href="files/Ashik_Himel(CV).pdf" class="btn" download="">Download CV <i class="fa fa-download"></i></a>
             </div>
         </div>
     </div>
